// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CProgressBar renders basic wrapper correctly 1`] = `
<div
  aria-valuemin="0"
  className="progress-bar"
  role="progressbar"
  style={
    Object {
      "width": "NaN%",
    }
  }
/>
`;

exports[`CProgressBar renders customized wrapper correctly 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="75"
  className="progress-bar progress-bar-animated progress-bar-striped bg-warning class-name"
  role="progressbar"
  style={
    Object {
      "width": "75%",
    }
  }
>
  75.00000%
</div>
`;
